# socrates

./: .gitignore  LICENSE  Pipfile  README.md  config.yaml  create_database.py  database.py  db_utils.py  embed_to_chroma.py  embedding.py  generate_key.py  groups_chat.json  import_events.py  ingest_to_chroma.py  installed_requirements.txt  nostr_client.py  nostr_dvm.db  nostr_event_demo.py  publish_and_store_example_event.py  pyproject.toml  query_and_summarize.py  requirements.txt  run_pipeline.py  subscription_prototype.py  test_embedding.py
.chroma/4e7860e4-0e7b-415b-b439-2fd5161fdcc5/: index_metadata.pickle
archive/: nostr_raw_ecdsa_example.py  nostr_schnorr_example.py  test_nostr.py
dvm/: embed.py  nostr_client.py
scripts/: query_and_summarize.py
socrates/: chroma.py  config.py  database.py  dvm_service.py  embedding.py  ingest_to_chroma.py  nostr_client.py  openai_summary.py  query_and_summarize.py  run_pipeline.py
