[project]
name = "nostr-llm-dvm"
version = "0.1.0"
description = "A Python project to build a Nostr-based LLM and integrate a DVM for event querying."
authors = [
    {name = "Ven Kravchenko", email = "veniamin.kravchenko@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nostr @ git+https://github.com/jeffthibault/python-nostr.git"
]
packages = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
